--- a/second trivia19.html
+++ b/second trivia19.html
@@ -50,11 +50,11 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='Epic'align="center">How many Planets did Star Killer base blow up?</h1>
+<h1 id ='trivia'align="center">Where did the First Order come from?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
-background-image: url(https://vignette.wikia.nocookie.net/battlefront/images/b/be/Skb-tile-lg.jpg/revision/latest?cb=20171007223919);
+background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
 background-repeat: no-repeat;
 background-size: cover;
 }
@@ -73,10 +73,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="second trivia1 wrong.html"><button>4</button></a>
-<a href="second trivia20.html"><button>5</button></a>
-<a href="second trivia1 wrong.html"><button>6</button></a>
-<a href="second trivia1 wrong.html"><button>7</button></a>
+<a href="second trivia1 wrong.html"><button>The inner core</button></a>
+<a href="second trivia20.html"><button>The Unkown Regions</button></a>
+<a href="second trivia1 wrong.html"><button>The Outer Rim </button></a>
+<a href="second trivia1 wrong.html"><button>The remanence of the Empire</button></a>
 </div>
 </body>
 </html>
