--- a/second trivia23.html
+++ b/second trivia23.html
@@ -50,18 +50,18 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">What does AT AT stand for?</h1>
+<h1 id ='gamer'align="center">How many imperials can a Star Destroyer hold?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
-background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-image: url(https://vignette.wikia.nocookie.net/starwars/images/8/88/ISDIIESB.png/revision/latest?cb=20130320005623);
 background-repeat: no-repeat;
 background-size: cover;
 }
 </style>
 <!-- add image/gif -->
 <div class="x">
-<img src="https://cdn-static.denofgeek.com/sites/denofgeek/files/styles/main_wide/public/2016/05/atat-walkers.jpg?itok=MpPWqA5A" 
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQB9L6Bis4cNiEntUCVu4TlW-uJU2Qq-1jwfJcSugYkhJZEXNhJUg" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -73,9 +73,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="second trivia1 wrong.html"><button>All Terrain Attack Transport </button></a>
-<a href="second trivia1 wrong.html"><button>Armored Terrain Attack Transport</button></a>
-<a href="second trivia24.html"><button>All Terrain Armored Transport</button></a>
+<a href="second trivia1 wrong.html"><button>133,640</button></a>
+<a href="second trivia24.html"><button>130,570</button></a>
+<a href="second trivia1 wrong.html"><button>128,650</button></a>
+<a href="second trivia1 wrong.html"><button>135,700</button></a>
 </div>
 </body>
 </html>
