--- a/second trivia25.html
+++ b/second trivia25.html
@@ -50,18 +50,18 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">How old was Anakin when he Turned to the dark side?</h1>
+<h1 id ='tittle'align="center">In Cannon after the fall of the Galactic Empire who became the leader?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
-background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
+background-image: url(https://i.ytimg.com/vi/ObnSMf6iBi8/maxresdefault.jpg);
 background-repeat: no-repeat;
 background-size: cover;
 }
 </style>
 <!-- add image/gif -->
 <div class="x">
-<img src="https://i.ytimg.com/vi/fDeSAh5nv5c/hqdefault.jpg?custom=true&w=168&h=94&stc=true&jpg444=true&jpgq=90&sp=67&sigh=7I90pUS0lAUNqxoUpICdaYsW1eU" 
+<img src="https://i.pinimg.com/736x/48/5f/a0/485fa015af3114920d906c951bd2ccd2.jpg" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -73,10 +73,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="second trivia1 wrong.html"><button>21</button></a>
-<a href="second trivia26.html"><button>22</button></a>
-<a href="second trivia1 wrong.html"><button>23</button></a>
-<a href="second trivia1 wrong.html"><button>24</button></a>
+<a href="second trivia1 wrong.html"><button>Grand Admiral Thrawn</button></a>
+<a href="second trivia1 wrong.html"><button>Colonel Yularen</button></a>
+<a href="second trivia26.html"><button>Gallius Rax</button></a>
+<a href="second trivia1 wrong.html"><button>Gar Saxon</button></a>
 </div>
 </body>
 </html>
