--- a/second trivia26.html
+++ b/second trivia26.html
@@ -50,7 +50,7 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">How old was Anakin when he died?</h1>
+<h1 id ='trivia'align="center">How old was Anakin when he Turned to the dark side?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
@@ -61,7 +61,7 @@ background-size: cover;
 </style>
 <!-- add image/gif -->
 <div class="x">
-<img src="https://cbsnews1.cbsistatic.com/hub/i/r/2015/12/15/a40efc03-73a6-458f-a5ff-697d1cca1aef/resize/620x465/7990fcf9a625c425516d571e5c720069/darth-vader-unmasked.png" 
+<img src="https://i.ytimg.com/vi/fDeSAh5nv5c/hqdefault.jpg?custom=true&w=168&h=94&stc=true&jpg444=true&jpgq=90&sp=67&sigh=7I90pUS0lAUNqxoUpICdaYsW1eU" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -73,10 +73,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="second trivia1 wrong.html"><button>40</button></a>
-<a href="second trivia1 wrong.html"><button>42</button></a>
-<a href="second trivia1 wrong.html"><button>43</button></a>
-<a href="second trivia27.html"><button>44</button></a>
+<a href="second trivia1 wrong.html"><button>21</button></a>
+<a href="second trivia27.html"><button>22</button></a>
+<a href="second trivia1 wrong.html"><button>23</button></a>
+<a href="second trivia1 wrong.html"><button>24</button></a>
 </div>
 </body>
 </html>
