--- a/second trivia24.html
+++ b/second trivia24.html
@@ -50,18 +50,18 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='tittle'align="center">In Cannon after the fall of the Galactic Empire who became the leader?</h1>
+<h1 id ='trivia'align="center">What does AT AT stand for?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
-background-image: url(https://i.ytimg.com/vi/ObnSMf6iBi8/maxresdefault.jpg);
+background-image: url(https://ak6.picdn.net/shutterstock/videos/18478306/thumb/1.jpg);
 background-repeat: no-repeat;
 background-size: cover;
 }
 </style>
 <!-- add image/gif -->
 <div class="x">
-<img src="https://i.pinimg.com/736x/48/5f/a0/485fa015af3114920d906c951bd2ccd2.jpg" 
+<img src="https://cdn-static.denofgeek.com/sites/denofgeek/files/styles/main_wide/public/2016/05/atat-walkers.jpg?itok=MpPWqA5A" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -73,10 +73,9 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="second trivia1 wrong.html"><button>Grand Admiral Thrawn</button></a>
-<a href="second trivia1 wrong.html"><button>Colonel Yularen</button></a>
-<a href="second trivia25.html"><button>Gallius Rax</button></a>
-<a href="second trivia1 wrong.html"><button>Gar Saxon</button></a>
+<a href="second trivia1 wrong.html"><button>All Terrain Attack Transport </button></a>
+<a href="second trivia1 wrong.html"><button>Armored Terrain Attack Transport</button></a>
+<a href="second trivia25.html"><button>All Terrain Armored Transport</button></a>
 </div>
 </body>
 </html>
