--- a/third trivia5.html
+++ b/third trivia5.html
@@ -61,7 +61,7 @@ background-size: cover;
 </style>
 <!-- add image/gif -->
 <div class="x">
-<img src="https://i.ytimg.com/vi/847wBf-9Z9w/maxresdefault.jpg" 
+<img src="http://images.nintendolife.com/9409798a1df33/a-mock-up-of-how-a-switch-mini-or-lite-model-could-look.original.png" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
