--- a/memory1.html
+++ b/memory1.html
@@ -10,7 +10,8 @@
     <div style="text-align: center">
     <h1>Memorizing a list</h1>
     <h3>For this excerise you will try to memorise a list of words.</h3>
-    <h3>Heres a warm-up. Memorise the words then proceed to the next page.</h3>
+    <h3>Heres a warm-up. Take a minute to memorise the words then proceed to the next page.</h3>
+    <h3>Keep in mind that you will not be able to go back</h3>
 <h3>yawn</h3> 
 <h3>dog</h3> 
 <h3>jog</h3> 
