--- a/Warriors5trivia.html
+++ b/Warriors5trivia.html
@@ -60,7 +60,7 @@ background-size: cover;
 </style>)
 <!-- add image/gif -->
 <div class="x">
-<img src="https://www.nba.com/media/warriors/Thunder_Clap_150.jpg" 
+<img src="https://www.nicepng.com/png/detail/142-1422602_golden-state-warriors-logo-png-golden-state-warriors.png" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
