add Warriors picture

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ background-size: cover;
 <a href="triviafunko.html"><img src="https://i.kym-cdn.com/entries/icons/original/000/024/030/thumb.png" width="202" height="206" title="Funko pop" alt="Trivia"></a>
 <a href="triviafunko.html"><img src="" width="202" height="206" title="Nintendo" alt="Trivia"></a>
 <a href="third trivia1.html"><img src="https://www.freepnglogos.com/uploads/nintendo-logo-png/red-nintendo-logo-transparent-vector-3.png" width="202" height="206" title="Nintendo" alt="Trivia"></a>
-<a href="Warriorstrivia.html"><img src=""></a>
+<a href="Warriorstrivia.html"><img src="https://goodlogo.com/images/logos/golden_state_warriors_logo_3913.png"></a>
 </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
