--- a/memory4.html
+++ b/memory4.html
@@ -6,9 +6,10 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <script src="mem.js"></script>
 </head>
 <body>
+    <div style="text-align: center">
     <h3>Type what you remember in the input box below.
          BE SURE to type one word at a time, then press the "check" button.
          Once you "check" all the words, a button will appear for you to continue.</h3>
@@ -18,7 +19,8 @@
         <div id="new">
             <a href="memory5.html"><button class="button1">Click to continue</button></a>
         </div>
+       
+        <script src="mem.js"></script>
         
-        <script src="main.js"></script>
 </body>
 </html>
