--- a/memory5.html
+++ b/memory5.html
@@ -1,1 +1,25 @@
-<!-- The same as the last but with pictures instead -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    <div style= "text-align: center">
+         <h1> Second list</h1>
+        <h3>As you progress, the list will get longer.</h3>
+        <h3>Here is a list of 12 words</h3>
+        <h3>walk</h3>
+        <h3>pencil</h3>
+        <h3>green</h3>
+        <h3>rock</h3>
+        <h3>table</h3>
+        <h3>tree</h3>
+        <h3>smack</h3>
+        <a href="memory4.html"><button class="button1">Click to continue</button></a>
+    </div>
+    
+</body>
+</html>
