--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="Trivia1.html">Regular show</a>
           <a class="dropdown-item" href="second trivia1.html">Star wars</a>
-          <a class="dropdown-item" href="third trivia1.html">Star wars</a>
+          <a class="dropdown-item" href="third trivia1.html">Nintendo</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="Description.html">Descripton</a>
         </div>
