commit funko trivia and warriors trivia

--- a/5triviafunko.html
+++ b/5triviafunko.html
@@ -60,7 +60,7 @@ background-size: cover;
 </style>)
 <!-- add image/gif -->
 <div class="v">
-<img src="https://hottopic.scene7.com/is/image/HotTopic/11428901_hi?$pdp_hero_zoom$" 
+<img src="https://img2.looper.com/img/gallery/funko-pops-you-can-sell-for-hundreds-of-dollars-right-now/freddy-funko-metallic-count-chocula-3494-44-1503678333.jpg" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
