--- a/fourth trivia3.html
+++ b/fourth trivia3.html
@@ -50,7 +50,7 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 tag ='trivia'align="center">What year did Iron Man come out?</h1>
+<h1 Tag ='trivia'align="center">What year did Iron Man come out?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
