--- a/fourth trivia6.html
+++ b/fourth trivia6.html
@@ -54,7 +54,7 @@
 <!-- BACKGROUND -->
 <style>
   body {
-background-image: url(https://image.shutterstock.com/image-photo/beautiful-abstract-grunge-decorative-navy-260nw-539880832.jpg);
+background-image: url(https://cdn190.picsart.com/231018107040202.png?r1024x1024);
 background-repeat: no-repeat;
 background-size: cover;
 }
