--- a/memory2.html
+++ b/memory2.html
@@ -15,8 +15,8 @@ Listed correctly, then "winner". if not then, "try again" -->
 <body>
     <div style="text-align: center;">
         <h3>Type what you remember in the input box below.</h3>
-               <h3> BE SURE to type one word at a time, then press the "check" button.(A text will appear to show if you got it correct or not)</h3>
-                <h3>Once you "check" all the Correct words, a button will appear for you to continue.</h3>
+               <h3> BE SURE to type one word at a time, in any order, then press the "check" button.(A text will appear to show if you got it correct or not)</h3>
+                <h3>Once you "check" all the correct words, a button will appear for you to continue.</h3>
                 </div>
         <button id='y'>Check answer</button>
         <input id='text' />
