--- a/memory5.html
+++ b/memory5.html
@@ -10,15 +10,18 @@
     <div style= "text-align: center">
          <h1> Second list</h1>
         <h3>As you progress, the list will get longer.</h3>
-        <h3>Here is a list of 12 words</h3>
+        <h3>Here is a list of 10 words</h3>
         <h3>walk</h3>
         <h3>pencil</h3>
         <h3>green</h3>
         <h3>rock</h3>
         <h3>table</h3>
         <h3>tree</h3>
-        <h3>smack</h3>
-        <a href="memory4.html"><button class="button1">Click to continue</button></a>
+        <h3>red</h3>
+        <h3>run</h3>
+        <h3>glass</h3>
+        <h3>flask</h3>
+        <a href="memory6.html"><button class="button1">Click to continue</button></a>
     </div>
     
 </body>
