--- a/fourth trivia3.html
+++ b/fourth trivia3.html
@@ -61,7 +61,7 @@ background-size: cover;
 </style>
 <p></p>
 <div class="x">
-<img src="=">
+<img src=""=>
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
