--- a/fourth trivia14.html
+++ b/fourth trivia14.html
@@ -54,7 +54,7 @@
 <!-- BACKGROUND -->
 <style>
   body {
-background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTyNVLC1NmLptGLfJhUDJDZCAZI2Kvu2TvEfa7jxBiQf5hK_uBH);
+background-image: url(https://media.comicbook.com/2019/05/spiderman-far-from-home-1172557-1280x0.jpeg);
 background-repeat: no-repeat;
 background-size: cover;
 }
