--- a/Trivia11.html
+++ b/Trivia11.html
@@ -72,10 +72,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href="TriviaEnd.html"><button class="button1">Mr. Maellard</button></a>
-<a href="Triviawrong10.html"><button class="button1">Skips</button></a>
-<a href="Triviawrong10.html"><button class="button1">Pops</button></a>
-<a href="Triviawrong10.html"><button class="button1">Mordecai & Rigby</button></a>
+<a href="TriviaEnd.html"><button class="boxbutton">Mr. Maellard</button></a>
+<a href="Triviawrong10.html"><button class="boxbutton">Skips</button></a>
+<a href="Triviawrong10.html"><button class="boxbutton">Pops</button></a>
+<a href="Triviawrong10.html"><button class="boxbutton">Mordecai & Rigby</button></a>
 </div>
   </body>
 </html>
