--- a/Trivia4.html
+++ b/Trivia4.html
@@ -73,10 +73,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="x">
-<a href="Triviawrong3.html"><button class="button1">Skippy</button></a>
-<a href="Triviawrong3.html"><button class="button1">Yeti boi</button></a>
-<a href="Triviawrong3.html"><button class="button1">Skipper</button></a>
-<a href="Trivia5.html"><button class="button1">Skips</button></a>
+<a href="Triviawrong3.html"><button class="boxbutton">Skippy</button></a>
+<a href="Triviawrong3.html"><button class="boxbutton">Yeti boi</button></a>
+<a href="Triviawrong3.html"><button class="boxbutton">Skipper</button></a>
+<a href="Trivia5.html"><button class="boxbutton">Skips</button></a>
   </div>
   </body>
 </html>
