--- a/Trivia6.html
+++ b/Trivia6.html
@@ -72,10 +72,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href="Trivia7.html"><button class="button1">"Ooooh!" and "Hm-Hm"</button></a>
-<a href="Triviawrong5.html"><button class="button1">"Yeah-yuh!" and "Wooo!"</button></a>
-<a href="Triviawrong5.html"><button class="button1">"Jolly good show"</button></a>
-<a href="Triviawrong5.html"><button class="button1">All of the above</button></a>
+<a href="Trivia7.html"><button class="boxbutton">"Ooooh!" and "Hm-Hm"</button></a>
+<a href="Triviawrong5.html"><button class="boxbutton">"Yeah-yuh!" and "Wooo!"</button></a>
+<a href="Triviawrong5.html"><button class="boxbutton">"Jolly good show"</button></a>
+<a href="Triviawrong5.html"><button class="boxbutton">All of the above</button></a>
 </div>
   </body>
 </html>
