--- a/Trivia7.html
+++ b/Trivia7.html
@@ -72,10 +72,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href="Triviawrong6.html"><button class="button1">Low Five Ghost</button></a>
-<a href="Triviawrong6.html"><button class="button1">Prank Ghost</button></a>
-<a href="Trivia8.html"><button class="button1">High Five Ghost</button></a>
-<a href="Triviawrong6.html"><button class="button1">The Ghost of the Park</button></a>
+<a href="Triviawrong6.html"><button class="boxbutton">Low Five Ghost</button></a>
+<a href="Triviawrong6.html"><button class="boxbutton">Prank Ghost</button></a>
+<a href="Trivia8.html"><button class="boxbutton">High Five Ghost</button></a>
+<a href="Triviawrong6.html"><button class="boxbutton">The Ghost of the Park</button></a>
 </div>
   </body>
 </html>
