--- a/Trivia10.html
+++ b/Trivia10.html
@@ -73,10 +73,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href="Triviawrong9.html"><button class="button1">A human with a big head</button></a>
-<a href="Trivia11.html"><button class="button1">Lollipop man</button></a>
-<a href="Triviawrong9.html"><button class="button1">An alien</button></a>
-<a href="Triviawrong9.html"><button class="button1">A regular person</button></a>
+<a href="Triviawrong9.html"><button class="boxbutton">A human with a big head</button></a>
+<a href="Trivia11.html"><button class="boxbutton">Lollipop man</button></a>
+<a href="Triviawrong9.html"><button class="boxbutton">An alien</button></a>
+<a href="Triviawrong9.html"><button class="boxbutton">A regular person</button></a>
 </div>
   </body>
 </html>
