--- a/Trivia2.html
+++ b/Trivia2.html
@@ -76,10 +76,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href="Triviawrong1.html"><button class="button1">4 years</button></a>
-<a href="Triviawrong1.html"><button class="button1">6 years</button></a>
-<a href="Trivia3.html"><button class="button1">8 years</button></a>
-<a href="Triviawrong1.html"><button class="button1">9 years</button></a>
+<a href="Triviawrong1.html"><button class="boxbutton">4 years</button></a>
+<a href="Triviawrong1.html"><button class="boxbutton">6 years</button></a>
+<a href="Trivia3.html"><button class="boxbutton">8 years</button></a>
+<a href="Triviawrong1.html"><button class="boxbutton">9 years</button></a>
 </div>
     
    
