--- a/Trivia3.html
+++ b/Trivia3.html
@@ -74,10 +74,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href="Triviawrong2.html"><button class="button1">They're jobless</button></a>
-<a href="Trivia4.html"><button class="button1">The local park</button></a>
-<a href="Triviawrong2.html"><button class="button1">The coffee shop</button></a>
-<a href="Triviawrong2.html"><button class="button1">The burger joint</button></a>
+<a href="Triviawrong2.html"><button class="boxbutton">They're jobless</button></a>
+<a href="Trivia4.html"><button class="boxbutton">The local park</button></a>
+<a href="Triviawrong2.html"><button class="boxbutton">The coffee shop</button></a>
+<a href="Triviawrong2.html"><button class="boxbutton">The burger joint</button></a>
 </div>
   </body>
 </html>
