--- a/Trivia5.html
+++ b/Trivia5.html
@@ -73,10 +73,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="x">
-<a href="Triviawrong4.html"><button class="button1">30</button></a>
-<a href="Triviawrong4.html"><button class="button1">17</button></a>
-<a href="Trivia6.html"><button class="button1">23</button></a>
-<a href="Triviawrong4.html"><button class="button1">Ageless</button></a>
+<a href="Triviawrong4.html"><button class="boxbutton">30</button></a>
+<a href="Triviawrong4.html"><button class="boxbutton">17</button></a>
+<a href="Trivia6.html"><button class="boxbutton">23</button></a>
+<a href="Triviawrong4.html"><button class="boxbutton">Ageless</button></a>
 </div>
   </body>
 </html>
