--- a/Trivia8.html
+++ b/Trivia8.html
@@ -72,10 +72,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href="Triviawrong7.html"><button class="button1">"My uncle"</button></a>
-<a href="Triviawrong7.html"><button class="button1">"My cousin"</button></a>
-<a href="Trivia9.html"><button class="button1">"My mom"</button></a>
-<a href="Triviawrong7.html"><button class="button1">"My dad"</button></a>
+<a href="Triviawrong7.html"><button class="boxbutton">"My uncle"</button></a>
+<a href="Triviawrong7.html"><button class="boxbutton">"My cousin"</button></a>
+<a href="Trivia9.html"><button class="boxbutton">"My mom"</button></a>
+<a href="Triviawrong7.html"><button class="boxbutton">"My dad"</button></a>
 </div>
   </body>
 </html>
