--- a/memory10.html
+++ b/memory10.html
@@ -6,21 +6,21 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="mem2.js"></script>
+    <script src="mem4.js"></script>
 </head>
 <body>
     <div style="text-align: center">
     <h3>Type what you remember in the input box below.
          BE SURE to type one word at a time, then press the "check" button.
          Once you "check" all the words, a button will appear for you to continue.</h3>
-        <button id='l'>Check answer</button>
+        <button id='n'>Check answer</button>
         <input id='text' />
         <div id="result"></div>
         <div id="new">
-            <a href="memory7.html"><button class="button1">Click to continue</button></a>
+            <a href="memory11.html"><button class="button1">Click to continue</button></a>
         </div>
        
-        <script src="mem2.js"></script>
+        <script src="mem4.js"></script>
         
 </body>
 </html>
