--- a/memory7.html
+++ b/memory7.html
@@ -10,15 +10,13 @@
 
     <div style= "text-align: center">
         <h2>Memorize these next 5 words.</h2>
-        <h3>Tip: Memorize the words by categorizing them into objects, color, action, or animals</h3>
-        <h3>bird</h3>
-        <h3>purple</h3>
-        <h3>three</h3>
-        <h3>swim</h3>
-        <h3>red</h3>
+        <h3>Tip: You can memorize the words by rearranging them to create a rythm. Try it out.</h3>
+        <h3>hop</h3>
+        <h3>knot</h3>
+        <h3>sob</h3>
+        <h3>drop</h3>
         <h3>sock</h3>
-        <h3>one</h3>
-        <a href="memory6.html"><button class="button1">Click to continue</button></a>
         </div>
+        <a href="memory9.html"><button class="button1">Click to continue</button></a>
 </body>
 </html>
