--- a/memory2.html
+++ b/memory2.html
@@ -22,7 +22,7 @@ Listed correctly, then "winner". if not then, "try again" -->
         <input id='text' />
         <div id="result"></div>
         <div id="new">
-            <a href="memory3.html"><button class="boxbutton">Click to continue</button></a>
+            <a href="memory3.html"><button>Click to continue</button></a>
         </div>
         
         <script src="main.js"></script>
