--- a/fourth trivia7.html
+++ b/fourth trivia7.html
@@ -75,7 +75,7 @@ background-size: cover;
 <a href="fourth trivia1 wrong.html"><button>Iron Man 3</button></a>
 <a href="fourth trivia1 wrong.html"><button>Avengers Age Of Ultron</button></a>
 <a href="fourth trivia8.html"><button>Captain America Civil war</button></a>
-<a href="fourth trivia1 wrong.html"><button>Spider Man Homecoing</button></a>
+<a href="fourth trivia1 wrong.html"><button>Spider Man Homecoming</button></a>
 </div>
 
 
