--- a/fifth trivia4.html
+++ b/fifth trivia4.html
@@ -74,7 +74,7 @@ background-size: cover;
 <div class="v">
 <a href="fifth trivia1 wrong.html"><button>Failed Science Experiment</button></a>
 <a href="fifth trivia1 wrong.html"><button>Was a test subject for it</button></a>
-<a href="fifth trivia5.html"><button>Shocked By Lightning</button></a>
+<a href="fifth trivia5.html"><button>Struct By Lightning</button></a>
 <a href="fifth trivia1 wrong.html"><button>Was given it</button></a>
 </div>
 
