--- a/fifth trivia5.html
+++ b/fifth trivia5.html
@@ -73,7 +73,7 @@ background-size: cover;
 </script>
 <div class="v">
 <a href="fifth trivia1 wrong.html"><button>true</button></a>
-<a href="fifth trivia6.html"><button>false/button></a>
+<a href="fifth trivia6.html"><button>false</button></a>
 </div>
 
 
