--- a/fifth trivia6.html
+++ b/fifth trivia6.html
@@ -74,7 +74,7 @@ background-size: cover;
 <div class="v">
 <a href="fifth trivia1 wrong.html"><button>Love</button></a>
 <a href="fifth trivia1 wrong.html"><button>Star</button></a>
-<a href="fifth trivia7.html"><buttonHope>Hope</button></a>
+<a href="fifth trivia7.html"><button>Hope</button></a>
 <a href="fifth trivia1 wrong.html"><button>Faith</button></a>
 </div>
 
