--- a/fifth trivia19.html
+++ b/fifth trivia19.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark"></head></head></head></head></head></head></head></head></head></head></head></head></head></head>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark"></head></head></head></head></head></head></head></head></head></head></head></head></head></head></head></head></head>
     <a class="navbar-brand" href="index.html">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -50,18 +50,18 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">In the New 52 animated Movies Which JL member dislikes Batman </h1>
+<h1 id ='trivia'align="center">In Aqua Man what is the goal in the Movie?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
-background-image: url(http://static.comicvine.com/uploads/original/6/65423/2130660-parademons.jpg);
+background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUDK2SlDjoUPvPZ7Y7596UBQ6hEoo5LgPWTUhDAOOycyCsmrQP);
 background-repeat: no-repeat;
 background-size: cover;
 }
 </style>
 <p></p>
 <div class="x">
-<img src="https://cdn2us.denofgeek.com/sites/denofgeekus/files/styles/main_wide/public/jlwarjl_0.jpg?itok=Ij9MRIc5"=>
+<img src="https://boygeniusreport.files.wordpress.com/2018/12/aquaman.jpg?quality=98&strip=all&w=782"=>
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -72,10 +72,10 @@ background-size: cover;
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="fifth trivia17.html"><button>Green Lantern</button></a>
-<a href="fifth trivia1 wrong.html"><button>Cyborg</button></a>
-<a href="fifth trivia1 wrong.html"><button>Superman</button></a>
-<a href="fifth trivia1 wrong.html"><button>Flash</button></a>
+<a href="fifth trivia20.html"><button>To take back the thrown of Atlantis</button></a>
+<a href="fifth trivia20.html"><button>To stop Exstinction to life on earth</button></a>
+<a href="fifth trivia20.html"><button>To get the Trident of Atlantis back</button></a>
+<a href="fifth trivia20.html"><button>Stop Black Manta</button></a>
 </div>
 
 
