--- a/fifth trivia20.html
+++ b/fifth trivia20.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark"></head></head></head></head></head></head></head></head></head></head></head></head></head></head>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark"></head></head></head></head></head></head></head></head></head></head></head></head></head></head></head></head></head></head>
     <a class="navbar-brand" href="index.html">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -50,18 +50,18 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">In the New 52 animated Movies Which JL member dislikes Batman </h1>
+<h1 id ='trivia'align="center">DC almost had to throw the idea of Batman after sales went down?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
-background-image: url(http://static.comicvine.com/uploads/original/6/65423/2130660-parademons.jpg);
+background-image: url();
 background-repeat: no-repeat;
 background-size: cover;
 }
 </style>
 <p></p>
 <div class="x">
-<img src="https://cdn2us.denofgeek.com/sites/denofgeekus/files/styles/main_wide/public/jlwarjl_0.jpg?itok=Ij9MRIc5"=>
+<img src="https://vignette.wikia.nocookie.net/batman/images/8/8e/Batman_JL.png/revision/latest?cb=20120117103751"=>
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -72,14 +72,8 @@ background-size: cover;
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="fifth trivia17.html"><button>Green Lantern</button></a>
-<a href="fifth trivia1 wrong.html"><button>Cyborg</button></a>
-<a href="fifth trivia1 wrong.html"><button>Superman</button></a>
-<a href="fifth trivia1 wrong.html"><button>Flash</button></a>
-</div>
-
-
-
+<a href="fifth trivia21.html"><button>True</button></a>
+<a href="fifth trivia1 wrong.html"><button>False</button></a>
 </body>
 </html>
 <head>
