--- a/fifth trivia22.html
+++ b/fifth trivia22.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark"></head></head></head></head></head></head></head></head></head></head></head></head></head></head>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark"></script>
     <a class="navbar-brand" href="index.html">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -50,18 +50,16 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">In the New 52 animated Movies Which JL member dislikes Batman </h1>
-<!-- BACKGROUND -->
-<style>
-  body {
-background-image: url(http://static.comicvine.com/uploads/original/6/65423/2130660-parademons.jpg);
-background-repeat: no-repeat;
-background-size: cover;
-}
-</style>
-<p></p>
-<div class="x">
-<img src="https://cdn2us.denofgeek.com/sites/denofgeekus/files/styles/main_wide/public/jlwarjl_0.jpg?itok=Ij9MRIc5"=>
+<h1 id ='trivia'align="center">YOU MADE IT TO THE END!</h1>
+<!-- add image/gif -->
+<div class="v">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQvEFUYyE-mcUSP--1fhA62QvAi991CLhJpxyQ5r_vod_AU8u1" 
+  alt="">
+</div>
+<!-- add image/gif -->
+<div class="v">
+<img src="http://clipartmag.com/images/congratulation-images-animated-18.gif" 
+alt="">
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -70,16 +68,3 @@ background-size: cover;
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
 </script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-</script>
-<div class="v">
-<a href="fifth trivia17.html"><button>Green Lantern</button></a>
-<a href="fifth trivia1 wrong.html"><button>Cyborg</button></a>
-<a href="fifth trivia1 wrong.html"><button>Superman</button></a>
-<a href="fifth trivia1 wrong.html"><button>Flash</button></a>
-</div>
-
-
-
-</body>
-</html>
-<head>
