--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <a class="dropdown-item" href="second trivia1.html">Star wars</a>
           <a class="dropdown-item" href="third trivia1.html">Nintendo</a>
           <a class="dropdown-item" href="fourth trivia1.html">Marvel</a>
+          <a class="dropdown-item" href="fifth trivia1.html">DC Universe</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="Description.html">Descripton</a>
         </div>
