--- a/memory.html
+++ b/memory.html
@@ -62,7 +62,7 @@ background-size: cover;
 </style>)
 <!-- add image/gif -->
 <div style="text-align: center;">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSCp-PuCnhjtoiAueYMVI9Pw0yz-819jQTavGj8hhlkZrzwkMYG" 
+    <img src="https://media2.giphy.com/media/l41JUepQ8rqpnI5ZS/giphy.gif" width= "150px" height= "150px"
     alt="">
 </div>
     <!-- Optional JavaScript -->
