--- a/memory3.html
+++ b/memory3.html
@@ -7,12 +7,19 @@
     <title>Document</title>
 </head>
 <body>
+        <style>
+                body {
+          background-image: url(https://i.redd.it/ti7rl4ct7wr11.png);
+          background-repeat: no-repeat;
+          background-size: cover;
+          }
+          </style>
     
     <div style= "text-align: center">
-         <h1> Second list</h1>
+         <h1> 2# list</h1>
         <h2>As you progress, the list will get longer.</h2>
-        <h2>Tip: Use the pictures to help you.</h2>
-        <h2>Here is a list of 7 words</h2>
+        <h2>Tip: Having a visual of the object can help you remember things better. Use the pictures to your advantage.</h2>
+        <h2>Here is a list of 7 words:</h2>
         <h3>apple</h3>
         <h3>snail</h3>
         <h3>ocean</h3>
