--- a/memory5.html
+++ b/memory5.html
@@ -7,10 +7,18 @@
     <title>Document</title>
 </head>
 <body>
+        <style>
+                body {
+          background-image: url(https://media.istockphoto.com/videos/yellow-background-video-id952405088?s=640x640);
+          background-repeat: no-repeat;
+          background-size: cover;
+          }
+          </style>
 
     <div style= "text-align: center">
+        <h2>3# list</h2>
         <h2>Memorize these next 5 words.</h2>
-        <h3>Tip: Memorize the words by categorizing them into objects, color, action, or animals</h3>
+        <h3>Tip: You can memorize the words by rearranging them into groups, object, color, action, and animal</h3>
         <h3>bird</h3>
         <h3>purple</h3>
         <h3>three</h3>
