--- a/memory11.html
+++ b/memory11.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+        <style>
+                body {
+          background-image: url(https://media2.giphy.com/media/3gBRNZhp5i4zm/giphy.gif);
+          background-repeat: no-repeat;
+          background-size: cover;
+          }
+          </style>
     <div style= "text-align: center">
     <h2>You made it to the end!</h2>
 </body>
