--- a/memory7.html
+++ b/memory7.html
@@ -7,16 +7,25 @@
     <title>Document</title>
 </head>
 <body>
+        <style>
+                body {
+          background-image: url(https://www.xmple.com/wallpaper/green-white-highlight-gradient-linear-1920x1080-c2-adff2f-ffffff-l-67-a-45-f-21.svg);
+          background-repeat: no-repeat;
+          background-size: cover;
+          }
+          </style>
 
     <div style= "text-align: center">
+        <h2>4# list</h2>
         <h2>Memorize these next 5 words.</h2>
-        <h3>Tip: You can memorize the words by rearranging them to create a rythm. Try it out.</h3>
+        <h3>Tip: Rearranging the words to create a rythm can help out a lot. Try it out.</h3>
         <h3>hop</h3>
         <h3>knot</h3>
         <h3>sob</h3>
         <h3>drop</h3>
         <h3>sock</h3>
+
+        <a href="memory8.html"><button class="button1">Click to continue</button></a>
         </div>
-        <a href="memory9.html"><button class="button1">Click to continue</button></a>
 </body>
 </html>
