--- a/fifth trivia10.html
+++ b/fifth trivia10.html
@@ -54,14 +54,14 @@
 <!-- BACKGROUND -->
 <style>
   body {
-background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJRRjBWs2y6a72MirHohW0-Kjy1diy5_HOC4Y4SpMrz7YBfBFy);
+background-image: url();
 background-repeat: no-repeat;
 background-size: cover;
 }
 </style>
 <p></p>
 <div class="x">
-<img src=""=>
+<img src="https://imgix.bustle.com/uploads/image/2018/10/11/479c29c4-e52c-483f-887c-82dfb7426941-screen-shot-2018-10-11-at-61237-pm.png?w=970&h=546&fit=crop&crop=faces&auto=format&q=70"=>
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
