--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@ background-size: cover;
     src="https://pentagram-production.imgix.net/3b6abdde-9ffb-4439-a571-6e96ac5ba8e7/emo_dcentertainment_02.jpg?w=640&fm=jpg&q=70&auto=format" 
     width="202" height="206" title="DC Universe" alt="Trivia"></a>
 
-
+<div class="bottom">
+  Created by: Albert, Daniel, Derrick, Nathan
 </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
