--- a/5triviafunko.html
+++ b/5triviafunko.html
@@ -49,7 +49,7 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">How many funko pops did they make?</h1>
+<h1 id ='trivia'align="center">What character is this mascot pop up in halloween?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
@@ -72,10 +72,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="x">
-    <a href="funkotriviaend.html"><button>"5,992"</button></a>
-    <a href="triviafunko5wrong.html"><button>"2,654"</button></a>
-    <a href="triviafunko5wrong.html"><button>"2,679"</button></a>
-    <a href="triviafunko5wrong.html"><button>"3,568"</button></a>
+    <a href="funkotriviaend.html"><button>"Count Chocula"</button></a>
+    <a href="triviafunko5wrong.html"><button>"Boo Berry"</button></a>
+    <a href="triviafunko5wrong.html"><button>"Franklen Berry"</button></a>
+    <a href="triviafunko5wrong.html"><button>"Fruit Brute"</button></a>
 </div>
 </body>
 </html>
