--- a/triviafunko1.html
+++ b/triviafunko1.html
@@ -49,7 +49,7 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">When was funko pops created?</h1>
+<h1 id ='trivia'align="center">Where is this funko from ?</h1>
 <!-- BACKGROUND -->
 <style>
   body {
@@ -60,7 +60,7 @@ background-size: cover;
 </style>)
 <!-- add image/gif -->
 <div class="x">
-<img src="https://images-na.ssl-images-amazon.com/images/I/51jAfUVaYLL._SX466_.jpg" 
+<img src="https://images-na.ssl-images-amazon.com/images/I/61hxvwVPcuL._SX425_.jpg" 
 alt="">
 </div>
 <!-- Optional JavaScript -->
@@ -72,10 +72,10 @@ alt="">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="x">
-<a href="triviafunkowrong1.html"><button>1983</button></a>
-<a href="triviafunkowrong1.html"><button>1975</button></a>
-<a href="triviafunkowrong1.html"><button>1962</button></a>
-<a href="2triviafunko.html"><button>1998</button></a>
+<a href="triviafunkowrong1.html"><button>Batman</button></a>
+<a href="triviafunkowrong1.html"><button>Captain America</button></a>
+<a href="triviafunkowrong1.html"><button>Dumbo</button></a>
+<a href="2triviafunko.html"><button>Flash</button></a>
 </div>
 </body>
 </html>
