--- a/memory2.html
+++ b/memory2.html
@@ -10,7 +10,7 @@ Listed correctly, then "winner". if not then, "try again" -->
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <script src="main.js"></script>
+    <script src="mem1.js"></script>
 </head>
 <body>
     <style>
@@ -34,6 +34,6 @@ Listed correctly, then "winner". if not then, "try again" -->
             <a href="memory3.html"><button>Click to continue</button></a>
         </div>
         </div>
-        <script src="main.js"></script>
+        <script src="mem1.js"></script>
 </body>
 </html>
