--- a/space wrong.html
+++ b/space wrong.html
@@ -34,7 +34,6 @@
     </div>
   </nav>
   
-
   <!doctype html>
 <html lang="en">
 <head>
@@ -50,35 +49,23 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center"></h1>
-<!-- BACKGROUND -->
-<style>
-    body {
-background-image: url();
-background-repeat: no-repeat;
-background-size: cover;
-}
-</style>
-<!-- add image/gif -->
-<div class="v">
-<img src="https://nightsky.jpl.nasa.gov/images/news/HDP_896.jpg" 
-alt="">
+<h1 id ='trivia'align="center">WRONG ANSWER</h1>
+<!-- image -->
+<div class="x">
+<img src="https://thumbor.forbes.com/thumbor/1280x868/https%3A%2F%2Fblogs-images.forbes.com%2Fstartswithabang%2Ffiles%2F2017%2F07%2Frnplain_innerhorizon.gif" alt="">
 </div>
+
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+</script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+</script>
+<div class="v">
+<a href="third trivia2.html"><button>Go Back</button></a>
+</div>
 </body>
 </html>
 <head>
-    
-<div>
-<div style="text-align: center;">
-<h1>Space Trivia</h1>
-
-<a href="third trivia2.html"><button>Click to continue</button></a>
-</div>
-        </body>
-        </html> 
-       
