--- a/squares.html
+++ b/squares.html
@@ -49,7 +49,7 @@
           </div>
         </nav>
         
-        <h2 class ="center">Crossword Puzzle<br> Find all the words to win</h2>
+        <h2 class ="center">Crossword Puzzle<br> Find all <span>the words</span> to win</h2>
 
 
 
