--- a/Trivia/DC/fifth trivia13.html
+++ b/Trivia/DC/fifth trivia13.html
@@ -76,7 +76,7 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">In Justice League Who forms the Jusice League</h1>
+<h1 id ='trivia'align="center">In Justice League Who forms the Justice League</h1>
 <!-- BACKGROUND -->
 <style>
   body {
