--- a/Trivia/DC/fifth trivia14.html
+++ b/Trivia/DC/fifth trivia14.html
@@ -73,7 +73,7 @@
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">In BvS what is the first thing Batma says to Superman</h1>
+<h1 id ='trivia'align="center">In BvS what is the first thing Batman says to Superman</h1>
 <!-- BACKGROUND -->
 <style>
   body {
