--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@ background-size: cover;
     <a href="Warriorstrivia.html"><img 
       src="https://teamwork-online-production.s3.amazonaws.com/uploads/21483644-6d68-43d4-a8c2-27b15d6d081f.png" 
       width="200" height="200"></a>
+
 <a href="Trivia1.html"><img 
-      <a href="/Trivia/Regularshow/Trivia1.html"><img 
+      <a href="/"><img 
 
   src="http://images6.fanpop.com/image/photos/40800000/2022c4af-regular-show-4-unknown_kings-40831918-720-540.jpg"
    width="202" height="206" title="Regular show Trivia" alt="Trivia"></a>
