--- a/Trivia/Puzzles/squares.html
+++ b/Trivia/Puzzles/squares.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
-
+    <script src='main.js'></script>
     <title>None</title>
   </head>
   <body>
@@ -86,7 +86,7 @@
           </div>  
 
           <!--These are the Boxes-->
-          <div class="_h_tml square" onmouseover="changeText('HTML Hint')" onmouseout="defaultText()"><input type = "text" class = "h noline" maxlength=100 onkeydown="replace()" style="text-transform:uppercase"></div>
+          <div class="_h_tml square" onmouseover="changeText('HTML Hint')" onmouseout="defaultText()"><input type = "text" class = "h noline" maxlength=1 onkeydown="replace()" style="text-transform:uppercase"></div>
           
           <div class="h_t_ml square" onmouseover="changeText('HTML Hint')" onmouseout="defaultText()"><input type="text" class = "t noline" maxlength= 1 onkeydown="replace()" style="text-transform:uppercase"></div>
           <!--This is Start of the words "Main.jss" and part of "HTML"-->
