--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="CrossWord.html">Crossword <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/Trivia/Puzzles/squares.html">Crossword <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="WordSearch.html">WordSearch</a>
+        <a class="nav-link" href="/Trivia/Puzzles/WordSearch.html">WordSearch</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Trivia
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="Trivia1.html">Regular show</a>
-          <a class="dropdown-item" href="second trivia1.html">Star wars</a>
-          <a class="dropdown-item" href="third trivia1.html">Nintendo</a>
-          <a class="dropdown-item" href="fourth trivia1.html">Marvel</a>
-          <a class="dropdown-item" href="fifth trivia1.html">DC Universe</a>
-          <a class="dropdown-item" href="Warriorstrivia.html">Warriors</a>
+          <a class="dropdown-item" href="/Trivia/Regularshow/Trivia1.html">Regular show</a>
+          <a class="dropdown-item" href="/Trivia/Starwars/second%20trivia1.html">Star wars</a>
+          <a class="dropdown-item" href="http://127.0.0.1:5500/Trivia/nintendo/third%20trivia1.html">Nintendo</a>
+          <a class="dropdown-item" href="/Trivia/Marvel/fourth%20trivia1.html">Marvel</a>
+          <a class="dropdown-item" href="/Trivia/DC/fifth%20trivia1.html">DC Universe</a>
+          <a class="dropdown-item" href="/Trivia/Warriors/Warriors1trivia.html">Warriors</a>
 
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="Description.html">Descripton</a>
