--- a/Trivia/Regularshow/Trivia1.html
+++ b/Trivia/Regularshow/Trivia1.html
@@ -22,7 +22,7 @@
             <a class="dropdown-item" href="../nintendo/third trivia1.html">Nintendo</a>
             <a class="dropdown-item" href="../Marvel/fourth trivia1.html">Marvel</a>
             <a class="dropdown-item" href="../DC/fifth trivia1.html">DC Universe</a>
-            <a class="dropdown-item" href="../funko/triviafunko.html">FunkoPop</a>
+            <a class="dropdown-item" href="../funko/triviafunko.html">FunkoPops</a>
             <a class="dropdown-item" href="../Warriors/Warriors1trivia.html">Warriors</a>
             <a class="dropdown-item" href="../newtrivia/">???</a>
             <div class="dropdown-divider"></div>
