--- a/Trivia/Basketball/basketballtrivia3.html
+++ b/Trivia/Basketball/basketballtrivia3.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>[Website name]</title>
   </head>
   <body>
@@ -21,10 +21,10 @@
   </style>)
       <script src= "svg.js"></script>
     <script src='main.js'></script>
-    <h1 id ='trivia'align="center">1#What team did Kobe Bryant play in?</h1>
+    <h1 id ='trivia'align="center">1# What basketball hoop brand is this?</h1>
 <p></p>
 <div class="x">
-  <img src="https://usathss.files.wordpress.com/2019/02/kobe-bryant-head-shot.jpg?w=1000&h=600&crop=1" alt="">
+  <img src="https://www.spalding.com/on/demandware.static/-/Sites-spalding_us-Library/default/dwdb7d17fd/images/backboardPicker/Portable.jpg" alt="">
 </div>
 <div class="v">
 <h3>Hint:</h3>
@@ -39,9 +39,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href="basketballtriviawrong4.html"><button class="boxbutton">Sixers</button></a>
-<a href="basketballtriviawrong4.html"><button class="boxbutton">nets</button></a>
-<a href="basketballtriviawrong4.html"><button class="boxbutton">Atlanta</button></a>
-<a href="basketballtrivia5.html"><button class="boxbutton">Lakers</button></a>
+<a href="basketballtriviawrong3.html"><button class="boxbutton">Wham O</button></a>
+<a href="basketballtriviawrong3.html"><button class="boxbutton">Wilson</button></a>
+<a href="basketballtriviawrong3.html"><button class="boxbutton">Jim Beam</button></a>
+<a href="basketballtrivia4.html"><button class="boxbutton">spalding</button></a>
 </div>
     
