--- a/Trivia/Basketball/basketballtriviawrong3.html
+++ b/Trivia/Basketball/basketballtriviawrong3.html
@@ -34,7 +34,6 @@
     </div>
   </nav>
   
-
   <!doctype html>
 <html lang="en">
 <head>
@@ -44,23 +43,18 @@
 
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="/style.css">
 <title>[Website name]</title>
 </head>
 <body>
   <script src= "svg.js"></script>
 <script src='main.js'></script>
-<h1 id ='trivia'align="center">YOU MADE IT TO THE END!</h1>
-<!-- add image/gif -->
-<div class="v">
-  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQvEFUYyE-mcUSP--1fhA62QvAi991CLhJpxyQ5r_vod_AU8u1" 
-  alt="">
+<h1 id ='trivia'align="center">WRONG ANSWER</h1>
+<!-- image -->
+<div class="x">
+<img src = "https://us.123rf.com/450wm/cougarsan/cougarsan1706/cougarsan170600069/80049823-stock-vector-the-flat-red-cross-wrong-incorrect-unfinished-vector-icon.jpg?ver=6"  alt="">
 </div>
-<!-- add image/gif -->
-<div class="v">
-<img src="http://clipartmag.com/images/congratulation-images-animated-18.gif" 
-alt="">
-</div>
+
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
@@ -68,3 +62,10 @@ alt="">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
 </script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+</script>
+<div class="v">
+<a href="basketballtrivia3.html"><button>Go Back</button></a>
+</div>
+</body>
+</html>
+<head>
