--- a/Trivia/Basketball/basketballtriviawrong4.html
+++ b/Trivia/Basketball/basketballtriviawrong4.html
@@ -43,7 +43,7 @@
 
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="/style.css">
 <title>[Website name]</title>
 </head>
 <body>
@@ -64,7 +64,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
 <div class="v">
-<a href="basketballtrivia3.html"><button>Go Back</button></a>
+<a href="basketballtrivia4.html"><button>Go Back</button></a>
 </div>
 </body>
 </html>
