--- a/Trivia/funko/5triviafunko.html
+++ b/Trivia/funko/5triviafunko.html
@@ -24,7 +24,7 @@
             <a class="dropdown-item" href="../DC/fifth trivia1.html">DC Universe</a>
             <a class="dropdown-item" href="../funko/triviafunko.html">FunkoPop</a>
             <a class="dropdown-item" href="../Warriors/Warriors1trivia.html">Warriors</a>
-            <a class="dropdown-item" href="../newtrivia/">???</a>
+            <a class="dropdown-item" href="../Basketball/basketballtrivia.html">Basketball</a>
             <div class="dropdown-divider"></div>
           </div>
           
