--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ background-size: cover;
 <div style="text-align: center">
     <h1 style="font-family:Georgia, 'Times New Roman', Times, serif;">Voohoo
     </h1>
-<p>Welcome to Voohoo! 
+<p class="pq">Welcome to Voohoo! 
   This is site contains different puzzles and trivias that will challenge your ability to solve things.</p>
 </div>
 <div style="text-align: center">
