--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@ background-size: cover;
 <a href="/Trivia/Puzzles/WordSearch.html"><img src="https://cdn.games-images.coolgames.com/word-search-gameplay-20/en/ICON_HP/196_151/b67862e0fcf503bbc84d7d4a3ff46683/word-search-gameplay-20.jpg" 
   width="202" height="206" title="WordSearch" alt="wordsearch"></a>
 
+  <a href="/Trivia/Life/life.html"><img 
+    src="https://media.gettyimages.com/photos/silhouette-of-a-man-running-down-a-corridor-on-october-17-2018-in-picture-id1052385604" 
+    width="202" height="206" title="DC Universe" alt="Trivia"></a>
+
   <a href="/Trivia/Warriors/Warriors1trivia.html"><img src="https://teamwork-online-production.s3.amazonaws.com/uploads/21483644-6d68-43d4-a8c2-27b15d6d081f.png" 
       width="200" height="200"></a>
 
