--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ background-size: cover;
   width="202" height="206" title="WordSearch" alt="wordsearch"></a>
 
   <a href="/Trivia/Life/life.html"><img 
-    src="https://media.gettyimages.com/photos/silhouette-of-a-man-running-down-a-corridor-on-october-17-2018-in-picture-id1052385604" 
+    src="https://st2.depositphotos.com/4012355/8287/i/950/depositphotos_82879022-stock-photo-it-is-your-choice.jpg" 
     width="202" height="206" title="DC Universe" alt="Trivia"></a>
 
   <a href="/Trivia/Warriors/Warriors1trivia.html"><img src="https://teamwork-online-production.s3.amazonaws.com/uploads/21483644-6d68-43d4-a8c2-27b15d6d081f.png" 
