--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ background-size: cover;
 <div class="v">
      <a href="trivia index.html"><button class="bocbutton"><h1>Trivias</h1></button></a>
     <a href="puzzle index.html"><button class="bozbutton"><h1>Puzzles</h1></button></a>
-    <a href="Others.html"><button class="boabutton"><h1>Other Games</h1></button></a>
+    <a href="Others.html"><button class="boabutton"><h1>Other</h1></button></a>
  
     </div>
 
